# bconv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
bconv/: __init__.py
bconv/doc/: document.py
bconv/fmt/: __init__.py  _export.py  _load.py  bioc.py  brat.py  conll.py  csv_.py  europepmc.py  pubanno.py  pubmed.py  pubtator.py  tsv.py  txt.py
bconv/nlp/: tokenize.py
bconv/util/: iterate.py  misc.py  stream.py
test/: README.md  test_dump.py  test_load.py  utils.py
test/data/: pmc  pubmed
test/data/bioc_json/: BC5CDR-example.json  CRAFT-example.json  NCBIdevset-example.json  elliptic-coordination.json  no-sent-boundary-inside-entity.json  sentence-level.json  tutorial-example.json
test/data/bioc_xml/: BC5CDR-example.xml  CRAFT-example.xml  NCBIdevset-example.xml  elliptic-coordination.xml  no-sent-boundary-inside-entity.xml  sentence-level.xml  tutorial-example.xml
test/data/bionlp/: BC5CDR-example.bionlp  CRAFT-example.bionlp  elliptic-coordination.bionlp
test/data/brat/: BC5CDR-example.ann  CRAFT-example.ann  elliptic-coordination.ann  tutorial-example.ann
test/data/conll/: BC5CDR-example.conll  NCBIdevset-example.conll  elliptic-coordination.conll  tutorial-example.conll
test/data/csv/: BC5CDR-example.csv  NCBIdevset-example.csv  elliptic-coordination.csv  tutorial-example.csv
test/data/europepmc/: BC5CDR-example.jsonl  NCBIdevset-example.jsonl  elliptic-coordination.jsonl  tutorial-example.jsonl
test/data/internal/: BC5CDR-example.json  CRAFT-example.json  NCBIdevset-example.json  bookdocument.json  (+4 more)
(+43 files in other folders)
