[tool.poetry]
name = "bconv"
version = "0.3.0"
description = "Convert between BioNLP formats"
authors = ["Lenz Furrer <lenz.furrer@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/lfurrer/bconv"

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.3"
nltk = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
