[tool.poetry]
name = "bconv"
version = "1.2.1"
description = "Convert between BioNLP formats"
authors = ["Lenz Furrer <lenz.furrer@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/lfurrer/bconv"
documentation = "https://github.com/lfurrer/bconv/wiki"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.3"
nltk = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
